--- a/code.ipynb
+++ b/code.ipynb
@@ -2,19 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "source": [
     "import random\n",
+    "from datetime import datetime, date\n",
+    "from math import log, sqrt, pi, exp\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import yfinance as yf\n",
+    "from scipy.stats import norm\n",
     "import tensortrade.stochastic as sp\n",
     "\n",
-    "%matplotlib inline"
+    "np.set_printoptions(precision=3)\n",
+    "pd.set_option(\"display.precision\", 2)\n",
+    "\n",
+    "plt.style.use(\"ggplot\")\n",
+    "plt.rcParams[\"figure.figsize\"] = 12, 8"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "source": [
     "data = sp.gbm(\n",
     "    base_price=100,\n",
@@ -26,7 +39,377 @@
     "\n",
     "data"
    ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                       open    high     low   close  volume\n",
+       "2010-01-01 00:00:00  100.00  100.00   98.05   99.00  299.42\n",
+       "2010-01-01 01:00:00   99.22   99.22   96.89   96.99  299.14\n",
+       "2010-01-01 02:00:00   97.06   97.81   96.43   96.76  313.85\n",
+       "2010-01-01 03:00:00   96.88   97.07   95.65   96.61  298.69\n",
+       "2010-01-01 04:00:00   96.41   96.55   94.86   95.73  280.55\n",
+       "...                     ...     ...     ...     ...     ...\n",
+       "2010-02-11 11:00:00  125.90  127.34  125.47  126.23  296.33\n",
+       "2010-02-11 12:00:00  126.53  127.02  125.12  125.24  296.14\n",
+       "2010-02-11 13:00:00  125.26  125.96  125.03  125.95  297.94\n",
+       "2010-02-11 14:00:00  125.98  126.67  125.28  125.28  305.79\n",
+       "2010-02-11 15:00:00  125.00  125.21  123.32  123.95  301.05\n",
+       "\n",
+       "[1000 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01 00:00:00</th>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>98.05</td>\n",
+       "      <td>99.00</td>\n",
+       "      <td>299.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01 01:00:00</th>\n",
+       "      <td>99.22</td>\n",
+       "      <td>99.22</td>\n",
+       "      <td>96.89</td>\n",
+       "      <td>96.99</td>\n",
+       "      <td>299.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01 02:00:00</th>\n",
+       "      <td>97.06</td>\n",
+       "      <td>97.81</td>\n",
+       "      <td>96.43</td>\n",
+       "      <td>96.76</td>\n",
+       "      <td>313.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01 03:00:00</th>\n",
+       "      <td>96.88</td>\n",
+       "      <td>97.07</td>\n",
+       "      <td>95.65</td>\n",
+       "      <td>96.61</td>\n",
+       "      <td>298.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01 04:00:00</th>\n",
+       "      <td>96.41</td>\n",
+       "      <td>96.55</td>\n",
+       "      <td>94.86</td>\n",
+       "      <td>95.73</td>\n",
+       "      <td>280.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-11 11:00:00</th>\n",
+       "      <td>125.90</td>\n",
+       "      <td>127.34</td>\n",
+       "      <td>125.47</td>\n",
+       "      <td>126.23</td>\n",
+       "      <td>296.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-11 12:00:00</th>\n",
+       "      <td>126.53</td>\n",
+       "      <td>127.02</td>\n",
+       "      <td>125.12</td>\n",
+       "      <td>125.24</td>\n",
+       "      <td>296.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-11 13:00:00</th>\n",
+       "      <td>125.26</td>\n",
+       "      <td>125.96</td>\n",
+       "      <td>125.03</td>\n",
+       "      <td>125.95</td>\n",
+       "      <td>297.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-11 14:00:00</th>\n",
+       "      <td>125.98</td>\n",
+       "      <td>126.67</td>\n",
+       "      <td>125.28</td>\n",
+       "      <td>125.28</td>\n",
+       "      <td>305.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-11 15:00:00</th>\n",
+       "      <td>125.00</td>\n",
+       "      <td>125.21</td>\n",
+       "      <td>123.32</td>\n",
+       "      <td>123.95</td>\n",
+       "      <td>301.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# RL Sample Code"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "# env = gym.make('FrozenLake-v0')\n",
+    "\n",
+    "# def train(alpha,eps,dis,episodes,min_eps,eps_rate):\n",
+    "#     Q = np.zeros((16,4))\n",
+    "#     for episode in range(episodes):\n",
+    "#         state = env.reset()\n",
+    "#         for t in range(100):\n",
+    "#             p = [1-3/4*eps if x == np.argmax(Q[state]) else eps/4 for x in range(4)]\n",
+    "#             action = np.random.choice(range(4),size=1,p=p)[0]\n",
+    "#             new_state, reward, done, info = env.step(action)\n",
+    "#             Q[state][action] += alpha*(reward+dis*np.max(Q[new_state])-Q[state][action])\n",
+    "#             if done:\n",
+    "#                 break\n",
+    "#             else:\n",
+    "#                 state = new_state\n",
+    "#         if eps > min_eps:\n",
+    "#             eps *= (1-eps_rate)\n",
+    "#     env.close()\n",
+    "#     return Q\n",
+    "\n",
+    "# Q = train(alpha=0.1,eps=1.,dis=0.99,episodes=10000,min_eps=0.1,eps_rate=0.001)"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Almgren-Chriss"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "def impact_perm(nu, gamma, beta):\n",
+    "    \"\"\"Returns the permenant dollar price impact per unit time\n",
+    "\n",
+    "    In paper as :math:`g(\\nu)`\n",
+    "\n",
+    "    Args:\n",
+    "        nu: rate of trading :math:`\\nu = n_k / \\tau`.\n",
+    "        gamma: Const. the $ move per share traded\n",
+    "        beta: Const. power law scaling of nu for perm impact.\n",
+    "            Default is .5 for square root rule\n",
+    "    \"\"\"\n",
+    "    return gamma * nu ** beta\n",
+    "\n",
+    "\n",
+    "def impact_temp(nu, eps, eta, alpha):\n",
+    "    \"\"\"Returns the temporary dollar price impact\n",
+    "\n",
+    "    In 2005 paper as :math:`h(\\nu)`\n",
+    "\n",
+    "    Args:\n",
+    "        nu: rate of trading :math:`\\nu = n_k / \\tau`.\n",
+    "        eps: Const. $ move\n",
+    "        eta: Const. the $ move per trading speed\n",
+    "        alpha: Const. power law scaling of nu for temp impact.\n",
+    "            Deafult if 1 for arbitrage free linear model\n",
+    "    \"\"\"\n",
+    "    return eps * np.sign(nu) + eta * nu ** alpha\n",
+    "\n",
+    "\n",
+    "def is_expected(n_t, gamma, eta, eps, tau):\n",
+    "    \"\"\"The expected implementation shortfall\n",
+    "\n",
+    "    Args:\n",
+    "        n_t: array of units executed at each time step where\n",
+    "            ``len(n_t * tau)`` is the time taken to execute\n",
+    "        gamma: Const. the $ move per share traded\n",
+    "        eta: Const. the $ move per trading speed\n",
+    "        eps: Const. the $ move per share traded\n",
+    "        tau: Time step between each element of n_t\n",
+    "    \"\"\"\n",
+    "    x_k = np.cumsum(n_t[::-1])  # units left to execute\n",
+    "    nu_t = n_t / tau\n",
+    "    return (\n",
+    "        np.sum(tau * x_k * impact_perm(nu_t)) +\n",
+    "        np.sum(n_t * impact_temp(nu_t))\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def is_var(n_t, sigma, tau):\n",
+    "    \"\"\"The vairance of the implementation shortfall\n",
+    "\n",
+    "    Args:\n",
+    "        n_t: array of units executed at each time step where\n",
+    "            ``len(n_t * tau)`` is the time taken to execute\n",
+    "        sigma: The vol of underlying securities\n",
+    "        tau: Time step between each element of n_t\n",
+    "    \"\"\"\n",
+    "    x_k = np.cumsum(n_t[::-1])  # units left to execute\n",
+    "    return sigma**2 + tau * np.dot(x_k.T, x_k)\n",
+    "\n",
+    "\n",
+    "def is_objective(n_t, risk_tol, gamma, eta, eps, tau, sigma):\n",
+    "    \"\"\"Almgren-Chriss objective function\n",
+    "\n",
+    "    Args:\n",
+    "        n_t: array of units executed at each time step where\n",
+    "            ``len(n_t * tau)`` is the time taken to execute\n",
+    "        gamma: Const. the $ move per share traded\n",
+    "        eta: Const. the $ move per trading speed\n",
+    "        eps: Const. the $ move per share traded\n",
+    "        tau: Time step between each element of n_t\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return (is_expected(n_t, gamma, eta, eps, tau) +\n",
+    "            risk_tol*is_var(n_t, sigma, tau))\n",
+    "\n",
+    "\n",
+    "def trade_decay_rate(tau, risk_tol, sigma, eta, gamma):\n",
+    "    \"\"\"Also known as :math:`\\kappa` in the paper\n",
+    "\n",
+    "    Note:\n",
+    "        :math:`\\kappa^{-1}` is the time it takes to\n",
+    "        deplete the portfolio by a factor of :math:`e`\n",
+    "        If :math:`\\lambda > 0` the trader will still liquidate the\n",
+    "        position on a time scale `:math:`\\kappa^{-1}` so\n",
+    "        :math:`\\kappa^{-1}` is the intrinsic time scale of the trade.\n",
+    "\n",
+    "    Args:\n",
+    "        tau: Time step between each element of :math:`n_t`\n",
+    "        risk_tol: The risk tolerance\n",
+    "        sigma: volatility of the unit price\n",
+    "        eta: Const. the $ move per trading speed\n",
+    "        gamma: Const. the $ move per share traded\n",
+    "    \"\"\"\n",
+    "    return np.sqrt(risk_tol*sigma**2 / (eta * (1 + .5*gamma*tau/eta)))\n",
+    "\n",
+    "\n",
+    "def trading_traj(trading_time, tau, risk_tol, sigma, eta, gamma):\n",
+    "    \"\"\"Returns the optimal trading trajectory :math:`n_t`\n",
+    "    (allocates the distribution of units over tau)\n",
+    "\n",
+    "    Args:\n",
+    "        trading_time: Total time to trade\n",
+    "        tau: Time step between each element of :math:`n_t`\n",
+    "        risk_tol: The risk tolerance\n",
+    "        sigma: volatility of the unit price\n",
+    "        eta: Const. the $ move per trading speed\n",
+    "        gamma: Const. the $ move per share traded\n",
+    "    \"\"\"\n",
+    "    k = trade_decay_rate(risk_tol, sigma, eta, gamma, tau)\n",
+    "    tj = np.arange(trading_time/tau) * tau\n",
+    "    return 2*np.sinh(.5*k*tau)/np.sinh(k*trading_time)*np.cosh(k*tj*trading_time)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Black-Scholes"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "source": [
+    "def d1(S,K,T,r,sigma):\n",
+    "    return(log(S/K)+(r+sigma**2/2.)*T)/(sigma*sqrt(T))\n",
+    "def d2(S,K,T,r,sigma):\n",
+    "    return d1(S,K,T,r,sigma)-sigma*sqrt(T)\n",
+    "    \n",
+    "def bs_call(S,K,T,r,sigma):\n",
+    "    return S*norm.cdf(d1(S,K,T,r,sigma))-K*exp(-r*T)*norm.cdf(d2(S,K,T,r,sigma))\n",
+    "  \n",
+    "def bs_put(S,K,T,r,sigma):\n",
+    "    return K*exp(-r*T)-S+bs_call(S,K,T,r,sigma)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "stock = 'SPY'\n",
+    "expiry = '12-18-2022'\n",
+    "strike_price = 370\n",
+    "\n",
+    "today = datetime.now()\n",
+    "one_year_ago = today.replace(year=today.year-1)\n",
+    "\n",
+    "df = yf.download('SPY', start=one_year_ago, end=today)\n",
+    "\n",
+    "df = df.sort_values(by=\"Date\")\n",
+    "df = df.dropna()\n",
+    "df = df.assign(close_day_before=df.Close.shift(1))\n",
+    "df['returns'] = ((df.Close - df.close_day_before)/df.close_day_before)\n",
+    "\n",
+    "sigma = np.sqrt(252) * df['returns'].std()\n",
+    "uty = (yf.download('^TNX', start=today.replace(day=today.day-1), end=today)['Close'].iloc[-1])/100\n",
+    "lcp = df['Close'].iloc[-1]\n",
+    "t = (datetime.strptime(expiry, \"%m-%d-%Y\") - datetime.utcnow()).days / 365\n",
+    "\n",
+    "print('The Option Price is: ', bs_call(lcp, strike_price, t, uty, sigma))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "The Option Price is:  81.64697776721886\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
