Complete black-scholes model

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "source": [
     "import random\n",
     "from datetime import datetime, date\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "source": [
     "data = sp.gbm(\n",
     "    base_price=100,\n",
@@ -45,17 +45,17 @@
      "data": {
       "text/plain": [
        "                       open    high     low   close  volume\n",
-       "2010-01-01 00:00:00  100.00  100.00   98.05   99.00  299.42\n",
-       "2010-01-01 01:00:00   99.22   99.22   96.89   96.99  299.14\n",
-       "2010-01-01 02:00:00   97.06   97.81   96.43   96.76  313.85\n",
-       "2010-01-01 03:00:00   96.88   97.07   95.65   96.61  298.69\n",
-       "2010-01-01 04:00:00   96.41   96.55   94.86   95.73  280.55\n",
+       "2010-01-01 00:00:00  100.00  101.31   99.69   99.73  291.28\n",
+       "2010-01-01 01:00:00   99.85  100.81   99.50   99.97  305.83\n",
+       "2010-01-01 02:00:00  100.02  100.69   99.45   99.45  303.25\n",
+       "2010-01-01 03:00:00   99.28   99.66   98.09   98.12  291.54\n",
+       "2010-01-01 04:00:00   98.09   99.06   97.37   98.97  299.11\n",
        "...                     ...     ...     ...     ...     ...\n",
-       "2010-02-11 11:00:00  125.90  127.34  125.47  126.23  296.33\n",
-       "2010-02-11 12:00:00  126.53  127.02  125.12  125.24  296.14\n",
-       "2010-02-11 13:00:00  125.26  125.96  125.03  125.95  297.94\n",
-       "2010-02-11 14:00:00  125.98  126.67  125.28  125.28  305.79\n",
-       "2010-02-11 15:00:00  125.00  125.21  123.32  123.95  301.05\n",
+       "2010-02-11 11:00:00  235.68  236.70  233.33  235.84  291.70\n",
+       "2010-02-11 12:00:00  235.79  238.39  234.07  238.39  298.44\n",
+       "2010-02-11 13:00:00  237.55  238.68  233.78  234.33  288.24\n",
+       "2010-02-11 14:00:00  234.95  234.95  225.80  226.24  287.53\n",
+       "2010-02-11 15:00:00  226.43  229.64  226.03  228.13  308.63\n",
        "\n",
        "[1000 rows x 5 columns]"
       ],
@@ -89,42 +89,42 @@
        "    <tr>\n",
        "      <th>2010-01-01 00:00:00</th>\n",
        "      <td>100.00</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>98.05</td>\n",
-       "      <td>99.00</td>\n",
-       "      <td>299.42</td>\n",
+       "      <td>101.31</td>\n",
+       "      <td>99.69</td>\n",
+       "      <td>99.73</td>\n",
+       "      <td>291.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-01 01:00:00</th>\n",
-       "      <td>99.22</td>\n",
-       "      <td>99.22</td>\n",
-       "      <td>96.89</td>\n",
-       "      <td>96.99</td>\n",
-       "      <td>299.14</td>\n",
+       "      <td>99.85</td>\n",
+       "      <td>100.81</td>\n",
+       "      <td>99.50</td>\n",
+       "      <td>99.97</td>\n",
+       "      <td>305.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-01 02:00:00</th>\n",
-       "      <td>97.06</td>\n",
-       "      <td>97.81</td>\n",
-       "      <td>96.43</td>\n",
-       "      <td>96.76</td>\n",
-       "      <td>313.85</td>\n",
+       "      <td>100.02</td>\n",
+       "      <td>100.69</td>\n",
+       "      <td>99.45</td>\n",
+       "      <td>99.45</td>\n",
+       "      <td>303.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-01 03:00:00</th>\n",
-       "      <td>96.88</td>\n",
-       "      <td>97.07</td>\n",
-       "      <td>95.65</td>\n",
-       "      <td>96.61</td>\n",
-       "      <td>298.69</td>\n",
+       "      <td>99.28</td>\n",
+       "      <td>99.66</td>\n",
+       "      <td>98.09</td>\n",
+       "      <td>98.12</td>\n",
+       "      <td>291.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-01 04:00:00</th>\n",
-       "      <td>96.41</td>\n",
-       "      <td>96.55</td>\n",
-       "      <td>94.86</td>\n",
-       "      <td>95.73</td>\n",
-       "      <td>280.55</td>\n",
+       "      <td>98.09</td>\n",
+       "      <td>99.06</td>\n",
+       "      <td>97.37</td>\n",
+       "      <td>98.97</td>\n",
+       "      <td>299.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -136,43 +136,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-02-11 11:00:00</th>\n",
-       "      <td>125.90</td>\n",
-       "      <td>127.34</td>\n",
-       "      <td>125.47</td>\n",
-       "      <td>126.23</td>\n",
-       "      <td>296.33</td>\n",
+       "      <td>235.68</td>\n",
+       "      <td>236.70</td>\n",
+       "      <td>233.33</td>\n",
+       "      <td>235.84</td>\n",
+       "      <td>291.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-02-11 12:00:00</th>\n",
-       "      <td>126.53</td>\n",
-       "      <td>127.02</td>\n",
-       "      <td>125.12</td>\n",
-       "      <td>125.24</td>\n",
-       "      <td>296.14</td>\n",
+       "      <td>235.79</td>\n",
+       "      <td>238.39</td>\n",
+       "      <td>234.07</td>\n",
+       "      <td>238.39</td>\n",
+       "      <td>298.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-02-11 13:00:00</th>\n",
-       "      <td>125.26</td>\n",
-       "      <td>125.96</td>\n",
-       "      <td>125.03</td>\n",
-       "      <td>125.95</td>\n",
-       "      <td>297.94</td>\n",
+       "      <td>237.55</td>\n",
+       "      <td>238.68</td>\n",
+       "      <td>233.78</td>\n",
+       "      <td>234.33</td>\n",
+       "      <td>288.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-02-11 14:00:00</th>\n",
-       "      <td>125.98</td>\n",
-       "      <td>126.67</td>\n",
-       "      <td>125.28</td>\n",
-       "      <td>125.28</td>\n",
-       "      <td>305.79</td>\n",
+       "      <td>234.95</td>\n",
+       "      <td>234.95</td>\n",
+       "      <td>225.80</td>\n",
+       "      <td>226.24</td>\n",
+       "      <td>287.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-02-11 15:00:00</th>\n",
-       "      <td>125.00</td>\n",
-       "      <td>125.21</td>\n",
-       "      <td>123.32</td>\n",
-       "      <td>123.95</td>\n",
-       "      <td>301.05</td>\n",
+       "      <td>226.43</td>\n",
+       "      <td>229.64</td>\n",
+       "      <td>226.03</td>\n",
+       "      <td>228.13</td>\n",
+       "      <td>308.63</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -181,7 +181,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 2
     }
    ],
    "metadata": {}
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "source": [
     "# env = gym.make('FrozenLake-v0')\n",
     "\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "source": [
     "def impact_perm(nu, gamma, beta):\n",
     "    \"\"\"Returns the permenant dollar price impact per unit time\n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "source": [
     "def d1(S,K,T,r,sigma):\n",
     "    return(log(S/K)+(r+sigma**2/2.)*T)/(sigma*sqrt(T))\n",
@@ -369,14 +369,57 @@
     "    return S*norm.cdf(d1(S,K,T,r,sigma))-K*exp(-r*T)*norm.cdf(d2(S,K,T,r,sigma))\n",
     "  \n",
     "def bs_put(S,K,T,r,sigma):\n",
-    "    return K*exp(-r*T)-S+bs_call(S,K,T,r,sigma)"
+    "    return K*exp(-r*T)-S+bs_call(S,K,T,r,sigma)\n",
+    "\n",
+    "def call_implied_volatility(Price, S, K, T, r):\n",
+    "    sigma = 0.001\n",
+    "    while sigma < 1:\n",
+    "        Price_implied = S * \\\n",
+    "            norm.cdf(d1(S, K, T, r, sigma))-K*exp(-r*T) * \\\n",
+    "            norm.cdf(d2(S, K, T, r, sigma))\n",
+    "        if Price-(Price_implied) < 0.001:\n",
+    "            return sigma\n",
+    "        sigma += 0.001\n",
+    "    return \"Not Found\"\n",
+    "\n",
+    "def put_implied_volatility(Price, S, K, T, r):\n",
+    "    sigma = 0.001\n",
+    "    while sigma < 1:\n",
+    "        Price_implied = K*exp(-r*T)-S+bs_call(S, K, T, r, sigma)\n",
+    "        if Price-(Price_implied) < 0.001:\n",
+    "            return sigma\n",
+    "        sigma += 0.001\n",
+    "    return \"Not Found\"\n",
+    "\n",
+    "\n",
+    "def call_delta(S,K,T,r,sigma):\n",
+    "    return norm.cdf(d1(S,K,T,r,sigma))\n",
+    "def call_gamma(S,K,T,r,sigma):\n",
+    "    return norm.pdf(d1(S,K,T,r,sigma))/(S*sigma*sqrt(T))\n",
+    "def call_vega(S,K,T,r,sigma):\n",
+    "    return 0.01*(S*norm.pdf(d1(S,K,T,r,sigma))*sqrt(T))\n",
+    "def call_theta(S,K,T,r,sigma):\n",
+    "    return 0.01*(-(S*norm.pdf(d1(S,K,T,r,sigma))*sigma)/(2*sqrt(T)) - r*K*exp(-r*T)*norm.cdf(d2(S,K,T,r,sigma)))\n",
+    "def call_rho(S,K,T,r,sigma):\n",
+    "    return 0.01*(K*T*exp(-r*T)*norm.cdf(d2(S,K,T,r,sigma)))\n",
+    "    \n",
+    "def put_delta(S,K,T,r,sigma):\n",
+    "    return -norm.cdf(-d1(S,K,T,r,sigma))\n",
+    "def put_gamma(S,K,T,r,sigma):\n",
+    "    return norm.pdf(d1(S,K,T,r,sigma))/(S*sigma*sqrt(T))\n",
+    "def put_vega(S,K,T,r,sigma):\n",
+    "    return 0.01*(S*norm.pdf(d1(S,K,T,r,sigma))*sqrt(T))\n",
+    "def put_theta(S,K,T,r,sigma):\n",
+    "    return 0.01*(-(S*norm.pdf(d1(S,K,T,r,sigma))*sigma)/(2*sqrt(T)) + r*K*exp(-r*T)*norm.cdf(-d2(S,K,T,r,sigma)))\n",
+    "def put_rho(S,K,T,r,sigma):\n",
+    "    return 0.01*(-K*T*exp(-r*T)*norm.cdf(-d2(S,K,T,r,sigma)))"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "source": [
     "stock = 'SPY'\n",
     "expiry = '12-18-2022'\n",
@@ -397,7 +440,11 @@
     "lcp = df['Close'].iloc[-1]\n",
     "t = (datetime.strptime(expiry, \"%m-%d-%Y\") - datetime.utcnow()).days / 365\n",
     "\n",
-    "print('The Option Price is: ', bs_call(lcp, strike_price, t, uty, sigma))"
+    "print('The Option Price is: ', bs_call(lcp, strike_price, t, uty, sigma))\n",
+    "\n",
+    "\n",
+    "print(\"Implied Volatility: \" +\n",
+    "      str(100 * call_implied_volatility(bs_call(lcp, strike_price, t, uty, sigma,), lcp, strike_price, t, uty,)) + \" %\")"
    ],
    "outputs": [
     {
@@ -406,7 +453,7 @@
      "text": [
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "The Option Price is:  81.64697776721886\n"
+      "The Option Price is:  81.5456288251815\n"
      ]
     }
    ],
